# oxmux

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: main.rs  tmux_manager.rs
agent/src/claude/: mod.rs
agent/src/pty/: mod.rs  pane.rs
agent/src/quic/: server.rs  tls.rs
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/__tests__/: mashedView.test.ts  paneId.test.ts  tmuxStore.test.ts  useTerminal.test.ts
client/src/components/: ClaudePane.vue  ContextBar.vue  CostMeter.vue  LoginPage.vue  MashedCell.vue  MashedView.vue  NewSessionDialog.vue  SessionSidebar.vue  TerminalPane.vue  ToolUseBlock.vue
client/src/composables/: useQuic.ts  useResponsive.ts  useTerminal.ts  useWebRtc.ts
client/src/stores/: auth.ts  tmux.ts
client/src/utils/: paneId.ts
docs/: agent.md  api.md  architecture.md  coturn-integration.md  deployment.md  ui.md
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  playwright.prod.config.ts
e2e/load/: ws-load.js
e2e/tests/: agent-install.spec.ts  agent-vs-server.spec.ts  claude-cursor-position.spec.ts  claude-cursor-quick.spec.ts  claude-expand-resize.spec.ts  claude-reconnect-diag.spec.ts  claude-reconnect-full.spec.ts  claude-view-switch.spec.ts  debug-terminal.spec.ts  helpers.ts  key-upload.spec.ts  mashed-view.spec.ts  pane-tree-debug.spec.ts  pane-visibility-after-p2p.spec.ts  single-vs-mashed.spec.ts  ssh-session.spec.ts  terminal-paste.spec.ts  terminal-resize-diagnostic.spec.ts  terminal-resize.spec.ts  terminal.spec.ts  transport-fallback-input.spec.ts  webrtc-stability.spec.ts
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  state.rs
server/src/agent/: binary.rs  deployer.rs  handler.rs  mod.rs  probe.rs  registry.rs
server/src/auth/: handler.rs  jwt.rs  mod.rs
server/src/claude/: parser.rs
server/src/db/: mod.rs  repo.rs
server/src/pty/: mod.rs  pane.rs  pool.rs
server/src/quic/: server.rs
server/src/session/: key_upload.rs  local.rs  manager.rs  mod.rs  quic_transport.rs  ssh_transport.rs  transport.rs  types.rs  webrtc_signal.rs
server/src/ssh/: connection.rs  manager.rs
server/src/tmux/: control.rs  layout.rs  mod.rs
server/src/webrtc/: turn.rs
server/src/ws/: handler.rs  mod.rs  protocol.rs  session_handler.rs  webrtc_transport.rs  webtransport.rs
server/tests/: agent_protocol.rs  auth.rs  key_upload.rs  ssh_session.rs
