[package]
name = "oxmux-agent"
version = "0.1.0"
edition = "2021"
description = "oxmux-agent — lightweight binary deployed on remote machines for QUIC/WebRTC P2P"
license = "MIT"

[[bin]]
name = "oxmux-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
wtransport = "0.7"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bytes = { version = "1", features = ["serde"] }
dashmap = "6"
base64 = "0.22"
rustls-pemfile = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"

[profile.release]
opt-level = "z"   # minimize binary size
lto = true
codegen-units = 1
strip = true
panic = "abort"
