[package]
name = "oxmux-server"
version = "0.1.0"
edition = "2021"
authors = ["Goran Jovanov <goran@roomler.live>"]
description = "Oxmux relay server — WebSocket, SSH, QUIC, PTY, tmux control mode"
license = "MIT"

[[bin]]
name = "oxmux-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# PTY
portable-pty = "0.8"

# SSH
russh = "0.44"
russh-keys = "0.44"

# QUIC
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

# WebRTC TURN credentials
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bytes = { version = "1", features = ["serde"] }
futures-util = "0.3"
rustls-pemfile = "2"

# Concurrent data structures
dashmap = "6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "uuid", "time"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# WebTransport (QUIC browser transport)
wtransport = "0.7"

# WebRTC (DataChannel browser transport)
webrtc = "0.11"

# Async traits
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
dotenvy = "0.15"
secrecy = { version = "0.8", features = ["serde"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "19"
reqwest = { version = "0.12", features = ["json"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
proptest = "1"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
